...
            )
        }
    }
}

sealed class BottomNavItem(var title: String, var icon: Int, var screen_route: String) {
    object Home : BottomNavItem("Home", R.drawable.baseline_home_24, Home_SCREEN)
    object Search : BottomNavItem("Search", R.drawable.baseline_search_24, SEARCH_SCREEN)
    object Setting : BottomNavItem("Setting", R.drawable.baseline_settings_24, SETTING_SCREEN)
}

