...

        OutlinedTextField(value = uiState.searchQuery, onValueChange = { newSearchQuery ->
            viewModel.onEvent(SearchPhotosEvent.OnSearchQueryChange(newSearchQuery))
        }, modifier = Modifier
            .padding(10.dp)
            .fillMaxWidth(), placeholder = {
            Text(text = "Search...")
        }, maxLines = 1, singleLine = true, label = { Text("Search") })

        SwipeRefresh(state = swipeRefreshState, onRefresh = {
            viewModel.onEvent(SearchPhotosEvent.Refresh)
        }) {
            if (uiState.photos.isNotEmpty()) {
...
