...
            ) {
                Text(
                    text = "List of Pictures",
                    style = TextStyle(color = Color.White, fontSize = 16.sp)
                )
                Spacer(Modifier.weight(1f))
                Text(text = "More", style = TextStyle(color = Color.Red, fontSize = 16.sp),
                    modifier = Modifier.clickable {
                        navController.navigate(route = PHOTOLIST_SCREEN)
                    }
                )
            }

...
